--- a/view/components/admin/plans/features/add/add.html
+++ b/view/components/admin/plans/features/add/add.html
@@ -3,6 +3,6 @@
     {% set panel_class = 'ui segment' %}
     {% set plan = createModel('SubscriptionPlans','subscriptions').findById(uuid) %}
     <div class="mt-4">
-        {{ component('subscriptions::admin.plans.features.form',{ plan_id: plan.id }) }}
+        {{ component('subscriptions::admin.plans.features.form',{ plan_id: plan.id, type: type }) }}
     </div>       
 {% endcomponent %}
